updates docker-compose.yml; image name set using env var
DOCKER_IMAGE := defaults to "joe-opensrc/slurm"
Use `--build` option with compose if you change this.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: ipc
 services:
 
   slurmctl:
-    image: "joe-opensrc/slurm"
+    image: ${DOCKER_IMAGE:-joe-opensrc/slurm}
     command: [ "slurmctld" ]
     hostname: ipc-slurmctld-1
     build: .
@@ -19,7 +19,7 @@ services:
           - ipc-slurmctl-1
 
   compute:
-    image: "joe-opensrc/slurm"
+    image: ${DOCKER_IMAGE:-joe-opensrc/slurm}
     command: [ "slurmd" ]
     hostname: ipc-compute-1
     privileged: true
